--- a/index.html
+++ b/index.html
@@ -34,19 +34,29 @@
         <div class="hero-grid">
             <div class="hero-text">
                 <div class="status-pill">
-                    <span class="dot"></span> Driving Finance Transformation
+                    <span class="dot"></span> Strategic Finance & Operations Leader
                 </div>
-                <h1>Modernizing Finance. <br><span class="accent-text">Automating Value.</span></h1>
+
+                <h1>
+                    Finance Transformation, <br>
+                    <span class="accent-text">Executed at Scale.</span>
+                </h1>
                 
                 <p class="hero-bio">
-                    I am a <strong>Finance Transformation Leader</strong> leveraging 10+ years of experience in <strong>FinTech Governance</strong> and <strong>Operational Strategy</strong>. 
+                    I lead the modernization of financial operating systems in regulated, high-stakes environments. 
                     <br><br>
-                    I bridge the gap between Fiscal Strategy and Technical Execution (AI/Cloud) to build the financial infrastructure of the future.
+                    By bridging <strong>Fiscal Governance</strong> with <strong>Technical Fluency</strong>, I deliver roadmap execution, risk mitigation, and operational efficiency for global organizations.
+                </p>
+
+                <p class="hero-meta" style="opacity: 0.9; font-size: 0.95rem; margin-bottom: 30px; font-weight: 500; color: #4b5563;">
+                    CPA & PMP Certified &nbsp;·&nbsp; 
+                    $65M+ Portfolio Governance &nbsp;·&nbsp; 
+                    ERP & Cloud Strategy
                 </p>
 
                 <div class="hero-buttons">
-                    <a href="#focus" class="btn-primary">See My Current Venture</a>
-                    <a href="#journey" class="btn-text">Explore Career Journey &rarr;</a>
+                    <a href="#focus" class="btn-primary">View Innovation Strategy</a>
+                    <a href="#journey" class="btn-text">See Leadership Track &rarr;</a>
                 </div>
             </div>
 
