--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hero-grid">
             <div class="hero-text">
                 <div class="status-pill">
-                    <span class="dot"></span> Strategic Finance & Operations Leader
+                    <span class="dot"></span> Strategic Finance & Technology Leader
                 </div>
 
                 <h1>
@@ -43,9 +43,9 @@
                 </h1>
                 
                 <p class="hero-bio">
-                    I lead the modernization of financial operating systems in regulated, high-stakes environments. 
+                    I lead finance transformation across systems, data, and intelligent workflows in regulated, high-stakes environments. 
                     <br><br>
-                    By bridging <strong>Fiscal Governance</strong> with <strong>Technical Fluency</strong>, I deliver roadmap execution, risk mitigation, and operational efficiency for global organizations.
+                    By bridging <strong>Fiscal Governance</strong> with <strong>Technical Fluency</strong>, I translate strategy into scalable platforms, controlled automation, and measurable operating outcomes.
                 </p>
 
                 <p class="hero-meta" style="opacity: 0.9; font-size: 0.95rem; margin-bottom: 30px; font-weight: 500; color: #4b5563;">
