--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 </p>
 
                 <p class="hero-meta" style="opacity: 0.9; font-size: 0.95rem; margin-bottom: 30px; font-weight: 500; color: #4b5563;">
-                    CPA & PMP Certified &nbsp;·&nbsp; 
+                    CPA & PMP &nbsp;·&nbsp; 
                     $65M+ Portfolio Governance &nbsp;·&nbsp; 
                     ERP & Cloud Strategy
                 </p>
 
                 <div class="hero-buttons">
-                    <a href="#focus" class="btn-primary">View Innovation Strategy</a>
-                    <a href="#journey" class="btn-text">See Leadership Track &rarr;</a>
+                    <a href="#focus" class="btn-primary">Platform & Innovation Strategy</a>
+                    <a href="#journey" class="btn-text">Operating & Leadership Experience&rarr;</a>
                 </div>
             </div>
 
