--- a/index.html
+++ b/index.html
@@ -437,27 +437,33 @@
 
   <div class="chat-body" id="chatBody"></div>
 
-  <div class="chat-input-area">
-    <div class="input-wrapper" style="display:flex; margin-top:10px; gap:5px;">
-      <input
-        type="text"
-        id="userInput"
-        placeholder="Ask about experience, projects, or the AI venture…"
-        onkeypress="checkEnter(event)"
-        style="flex:1; padding:8px; border-radius:20px; border:1px solid #ccc;"
-      >
-      <button onclick="sendUserMessage()" style="background:none; border:none; color:#2563eb; cursor:pointer;">
-        <i class="fas fa-paper-plane"></i>
-      </button>
-    </div>
+<div class="chat-input-area">
+  <div class="input-wrapper" style="display:flex; margin-top:10px; gap:5px;">
+    <input
+      type="text"
+      id="userInput"
+      placeholder="Ask about experience, projects, or the AI venture…"
+      onkeypress="checkEnter(event)"
+      style="flex:1; padding:8px; border-radius:20px; border:1px solid #ccc;"
+    >
+    <button onclick="sendUserMessage()" style="background:none; border:none; color:#2563eb; cursor:pointer;">
+      <i class="fas fa-paper-plane"></i>
+    </button>
+  </div>
 
-    <!-- ✅ Optional: keep Joke as a small secondary link -->
-    <div class="chat-footer-note" style="margin-top:8px; font-size:12px; opacity:0.8;">
-      <span style="cursor:pointer;" onclick="handleInput('joke')">Need a break? 😄</span>
-    </div>
+  <!-- ✅ quick replies moved DOWN here -->
+  <div class="quick-replies" id="quickReplies" style="margin-top:10px;">
+    <button data-topic="experience">💼 Experience</button>
+    <button data-topic="projects">📌 Projects</button>
+    <button data-topic="skills">💻 Skills</button>
+    <button data-topic="venture">🚀 Venture</button>
+    <button data-topic="contact">✉️ Contact</button>
+  </div>
+
+  <div class="chat-footer-note" style="margin-top:8px; font-size:12px; opacity:0.8;">
+    <span style="cursor:pointer;" onclick="handleInput('joke')">Need a break? 😄</span>
   </div>
 </div>
-
 
 <script>
     // --- 1. REVEAL ANIMATION (保留这个以防白屏) ---
