--- a/index.html
+++ b/index.html
@@ -456,8 +456,7 @@
   </div>
 </div>
 
-<script src="script.js"></script> 
+<script src="script.js" defer></script>
 </body>
 </html>
-</body>
-</html>
+
