--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </p>
 
                 <p class="hero-meta" style="color: #6b7280; font-weight: 500; margin-bottom: 25px;">
-                    CPA & PMP &nbsp;·&nbsp; $65M+ Governance &nbsp;·&nbsp; ERP Strategy
+                    Forte Fellow &nbsp;·&nbsp; CPA & PMP &nbsp;·&nbsp; $65M+ Governance
                 </p>
-
+                
                 <div class="hero-buttons">
                     <a href="#venture" class="btn-primary">Platform & Innovation Strategy</a>
                     <a href="#journey" class="btn-text">Operating & Leadership Experience &rarr;</a>
@@ -209,8 +209,7 @@
             <h3>Multidimensional Career Journey</h3>
             <p>Bridging FinTech, Corporate Leadership, and Entrepreneurship.</p>
         </div>
-
-        <div class="timeline-wrapper">
+<div class="timeline-wrapper">
             
             <div class="timeline-row">
                 <div class="timeline-time">
@@ -218,12 +217,15 @@
                 </div>
                 <div class="timeline-content">
                     <div class="tags-row">
-                        <span class="tag tag-strategy">AI Strategy</span>
-                        <span class="tag tag-strategy">Product Mgmt</span>
+                        <span class="tag tag-strategy">Forte Fellow</span>
+                        <span class="tag tag-strategy">Full Scholarship</span>
                     </div>
                     <h4>MBA Candidate & Innovation Lead</h4>
-                    <p class="company">Arizona State University</p>
-                    <p class="desc">Transitioning from Governance to Product Leadership. President of Graduate Women's Leadership Association.</p>
+                    <p class="company">Arizona State University (W. P. Carey School of Business)</p>
+                    <p class="desc">
+                        <strong>Selected for Net Investor (Fall 2025).</strong><br>
+                        President of Graduate Women's Leadership Association. Specializing in AI for Business and Consulting.
+                    </p>
                 </div>
             </div>
 
@@ -235,64 +237,65 @@
                     <div class="tags-row">
                         <span class="tag tag-fintech">FinTech Governance</span>
                         <span class="tag tag-fintech">Portfolio Mgmt ($65M)</span>
-                        <span class="tag tag-fintech">Agile</span>
                     </div>
                     <h4>Senior Portfolio Manager, Technology</h4>
-                    <p class="company">Citi (Citibank)</p>
+                    <p class="company">Citi</p>
                     <p class="desc">
-                        Operated within the <strong>Tech Sector</strong> of a global bank. 
-                        Managed the financial governance for technology investments, bridging the gap between engineering delivery and financial accountability.
-                        Automated reporting via Power BI.
+                        Managed financial governance for the Tech Sector of a global bank. 
+                        Bridged engineering delivery and financial accountability, automating reporting via Power BI to drive decision-making.
                     </p>
                 </div>
             </div>
 
             <div class="timeline-row highlight-row">
                 <div class="timeline-time">
-                    <span class="year">2021 - Present</span>
+                    <span class="year">2019 - 2024</span>
                 </div>
                 <div class="timeline-content">
                     <div class="tags-row">
-                        <span class="tag tag-vol">Board Leadership</span>
-                        <span class="tag tag-vol">Non-Profit CFO</span>
+                        <span class="tag tag-ent">Founder</span>
+                        <span class="tag tag-ent">P&L Management</span>
                     </div>
-                    <h4>Director of Finance (CFO Role)</h4>
-                    <p class="company">PMI (Project Management Institute) - Lakeshore Chapter</p>
+                    <h4>Franchise Owner / Director</h4>
+                    <p class="company">IDEA Lab Kids (East Oakville)</p>
                     <p class="desc">
-                        Overseeing budgeting and financial strategy for 3,000+ members. 
+                        Founded and scaled a STEAM education franchise over 5 years. 
+                        Directed all business operations, from government licensing and construction to financial planning and marketing.
                     </p>
                 </div>
             </div>
 
             <div class="timeline-row">
                 <div class="timeline-time">
-                    <span class="year">2017 - 2021</span>
+                    <span class="year">2021 - 2023</span>
                 </div>
                 <div class="timeline-content">
                     <div class="tags-row">
-                        <span class="tag tag-corp">Controllership</span>
-                        <span class="tag tag-corp">ERP Implementation</span>
-                        <span class="tag tag-corp">Audit</span>
+                        <span class="tag tag-vol">Board Leadership</span>
+                        <span class="tag tag-vol">Non-Profit Finance</span>
                     </div>
-                    <h4>Controller / Finance Manager</h4>
-                    <p class="company">Contessa Developments | Amica Senior Lifestyles</p>
-                    <p class="desc">Directed full-cycle accounting for <strong>$100M+ real estate developments</strong>. Led Yardi ERP Implementation.</p>
+                    <h4>Vice President Finance</h4>
+                    <p class="company">PMI-CTT (Canada's Technology Triangle)</p>
+                    <p class="desc">
+                        Board member overseeing financial operations, investments, and regulatory compliance (CRA) for the chapter.
+                    </p>
                 </div>
             </div>
 
             <div class="timeline-row">
                 <div class="timeline-time">
-                    <span class="year">2018 - 2020</span>
+                    <span class="year">2017 - 2022</span>
                 </div>
                 <div class="timeline-content">
                     <div class="tags-row">
-                        <span class="tag tag-ent">Entrepreneurship</span>
-                        <span class="tag tag-ent">P&L Management</span>
+                        <span class="tag tag-corp">Controllership</span>
+                        <span class="tag tag-corp">ERP Implementation</span>
                     </div>
-                    <h4>Franchise Owner / Director</h4>
-                    <p class="company">IDEA Lab Kids</p>
+                    <h4>Controller / Finance Manager</h4>
+                    <p class="company">Contessa Developments | Amica Senior Lifestyles</p>
                     <p class="desc">
-                        Founded and operated a STEAM education franchise. Managed government licensing, construction, and marketing.
+                        Directed full-cycle accounting for <strong>$100M+ real estate developments</strong>. 
+                        Led Yardi ERP Implementation and modernized financial systems (Payscan, Sisense) to increase operational efficiency.
                     </p>
                 </div>
             </div>
