--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
 <div class="timeline-wrapper">
             
-           <div class="timeline-row">
+            <div class="timeline-row">
                 <div class="timeline-time">
                     <span class="year">2024 - Present</span>
                 </div>
@@ -239,14 +239,8 @@
                         </div>
                     </div>
 
-                    <p class="desc" style="margin-top: 12px;">
-                        Specializing in AI for Business. Transitioning from Governance to Product Leadership.
-                    </p>
-                </div>
-            </div>
-
                     <p class="desc" style="margin-top: 15px;">
-                        Transitioning from Governance to Product Leadership. Specializing in AI for Business and Consulting.
+                        Specializing in AI for Business. Transitioning from Governance to Product Leadership.
                     </p>
                 </div>
             </div>
@@ -259,7 +253,6 @@
                     <div class="tags-row">
                         <span class="tag tag-fintech">FinTech Governance</span>
                         <span class="tag tag-fintech">Portfolio Mgmt ($65M)</span>
-                        <span class="tag tag-fintech">Agile</span>
                     </div>
                     <h4>Senior Portfolio Manager, Technology</h4>
                     <p class="company">Citi</p>
@@ -295,7 +288,7 @@
                 <div class="timeline-content">
                     <div class="tags-row">
                         <span class="tag tag-vol">Board Leadership</span>
-                        <span class="tag tag-vol">Non-Profit Finance</span>
+                        <span class="tag tag-vol">VP Finance</span>
                     </div>
                     <h4>Vice President Finance</h4>
                     <p class="company">PMI-CTT (Canada's Technology Triangle)</p>
@@ -318,7 +311,7 @@
                     <p class="company">Contessa Developments | Amica Senior Lifestyles</p>
                     <p class="desc">
                         Directed full-cycle accounting for <strong>$100M+ real estate developments</strong>. 
-                        Led Yardi ERP Implementation and modernized financial systems (Payscan, Sisense) to increase operational efficiency.
+                        Led Yardi ERP Implementation and modernized financial systems to increase operational efficiency.
                     </p>
                 </div>
             </div>
