--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <a href="#journey" class="nav-item">Journey</a>
             <a href="#impact" class="nav-item">Impact</a>
             <a href="#insights" class="nav-item">Insights</a>
+            <a href="https://calendly.com/YOUR-LINK-HERE" target="_blank" class="nav-cta-btn">
+                Let's Connect
+            </a>
         </div>
         
         <div class="theme-toggle" id="theme-toggle" onclick="toggleTheme()" style="cursor: pointer; margin-left: 20px; font-size: 1.2rem;">
