--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <span class="tag tag-fintech">Portfolio Mgmt ($65M)</span>
                     </div>
                     <h4>Senior Portfolio Manager, Technology</h4>
-                    <p class="company">Citi</p>
+                    <p class="company">Citibank</p>
                     <p class="desc">
                         Managed financial governance for the Tech Sector of a global bank. 
                         Bridged engineering delivery and financial accountability, automating reporting via Power BI to drive decision-making.
@@ -274,8 +274,9 @@
                     <div class="tags-row">
                         <span class="tag tag-ent">Founder</span>
                         <span class="tag tag-ent">P&L Management</span>
+                        <span class="tag tag-ent">Venture Operations/span>
                     </div>
-                    <h4>Franchise Owner / Director</h4>
+                    <h4>Founder / Director</h4>
                     <p class="company">IDEA Lab Kids (East Oakville)</p>
                     <p class="desc">
                         Founded and scaled a STEAM education franchise over 5 years. 
