--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </div>
         
         <div style="text-align: center; margin-top: 3rem;">
-            <a href="#all-insights" class="btn btn-secondary">View All Insights &rarr;</a>
+            <a href="https://www.linkedin.com/in/edith-wang1" class="btn btn-secondary">View All Insights &rarr;</a>
         </div>
     </div>
 </section>
