--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </p>
 
                 <p class="hero-meta" style="color: #6b7280; font-weight: 500; margin-bottom: 25px;">
-                    Forte Fellow &nbsp;·&nbsp; CPA & PMP &nbsp;·&nbsp; $65M+ Governance
+                    CPA & PMP &nbsp;·&nbsp; $65M+ Governance &nbsp;·&nbsp; Forté Fellow 
                 </p>
                 
                 <div class="hero-buttons">
