--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </p>
 
                 <p class="hero-meta" style="color: #6b7280; font-weight: 500; margin-bottom: 25px;">
-                    CPA & PMP &nbsp;·&nbsp; Forté Fellow &nbsp;·&nbsp; $65M+ Governance &nbsp;·&nbsp; ERP Implementation
+                    CPA & PMP &nbsp;·&nbsp; Forté Fellow &nbsp;·&nbsp; $65M+ Portfolio Governance &nbsp;·&nbsp; Enterprise Systems
                 </p>
                 
                 <div class="hero-buttons">
